--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <header>
-
+        <!-- logo e testo -->
     </header>
     <main>
         <div class="newtask">
-
+            <!-- lista -->
         </div>
         <div class="today">
-
+            <!-- lista -->
         </div>
         <div class="upcoming">
-
+            <!-- lista -->
         </div>
     </main>
 </body>
