--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
 </head>
 <body>
     <header>
-        <!-- logo e testo -->
+        <div>
+            <!-- logo e testo -->
+            <img class="logo" src="img/Logo.png" alt="Logo Boolean">
+            <h1>Toboolist</h1>
+        </div>
     </header>
     <main>
-        <div class="newtask">
-            <!-- lista -->
-        </div>
-        <div class="today">
-            <!-- lista -->
-        </div>
-        <div class="upcoming">
-            <!-- lista -->
-        </div>
+        <container>
+            <div class="newtask">
+                <!-- lista -->
+            </div>
+            <div class="today">
+                <!-- lista -->
+            </div>
+            <div class="upcoming">
+                <!-- lista -->
+            </div>
+        </container>
     </main>
 </body>
 </html>
