--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
         </div>
     </header>
     <main>
-        <container>
+        <div class="webapp">
+            <button class="add">
+                Add Task
+            </button>
+            <button class="add2">
+                Add Section
+            </button>
             <div class="newtask">
                 <!-- lista -->
             </div>
@@ -26,7 +32,7 @@
             <div class="upcoming">
                 <!-- lista -->
             </div>
-        </container>
+        </div>
     </main>
 </body>
 </html>
