--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
             <button class="add2">
                 Add Section
             </button>
+        </div>
+        <div class="webapp" id="zeromargin">
             <div class="newtask">
                 <!-- lista -->
+                &#9660 <span class="bold"> New Task</span>
+                <br>
+                <br>
+                <span class="spunta">&#10003</span> <h2>Quarterly Newsletter</h2> <span class="blu">Editorial</span>
             </div>
             <div class="today">
                 <!-- lista -->
