--- a/index.html
+++ b/index.html
@@ -29,13 +29,21 @@
                 <!-- lista -->
                 &#9660 <span class="bold"> New Task</span>
                 <br>
-                <br>
                 <span class="spunta">&#10003</span> <h2>Quarterly Newsletter</h2> <span class="blu">Editorial</span>
             </div>
-            <div class="today">
+            <div class="today spazioup">
                 <!-- lista -->
+                &#9660 <span class="bold"> Today </span>
+                <br>
+                <span class="spunta">&#10003</span><h2>Recruiting blog post</h2><span class="blu">Editorial</span>
+                <br>
+                <span class="spunta">&#10003</span><h2>Mobile app Launch</h2><span class="viola">Q1 Goals</span>
+                <br>
+                <span class="cross">&#10005</span><h2>Interview John H.</h2><span class="verde">Recruiting</span>
+                <br>
+                <span class="spunta">&#10005</span><h2>Summit update to mobile storefronts</h2><span class="giallo">Mobile</span>
             </div>
-            <div class="upcoming">
+            <div class="upcoming spazioup">
                 <!-- lista -->
             </div>
         </div>
