+ Upcoming + CSS Code Clean

--- a/index.html
+++ b/index.html
@@ -29,22 +29,31 @@
                 <!-- lista -->
                 &#9660 <span class="bold"> New Task</span>
                 <br>
-                <span class="spunta">&#10003</span> <h2>Quarterly Newsletter</h2> <span class="blu">Editorial</span>
+                <span class="spunta">&#10003</span> <h2>Quarterly Newsletter</h2> <span class="tag blu">Editorial</span>
             </div>
             <div class="today spazioup">
                 <!-- lista -->
                 &#9660 <span class="bold"> Today </span>
                 <br>
-                <span class="spunta">&#10003</span><h2>Recruiting blog post</h2><span class="blu">Editorial</span>
+                <span class="spunta">&#10003</span><h2>Recruiting blog post</h2><span class="tag blu">Editorial</span>
                 <br>
-                <span class="spunta">&#10003</span><h2>Mobile app Launch</h2><span class="viola">Q1 Goals</span>
+                <span class="spunta">&#10003</span><h2>Mobile app Launch</h2><span class="tag viola">Q1 Goals</span>
                 <br>
-                <span class="cross">&#10005</span><h2>Interview John H.</h2><span class="verde">Recruiting</span>
+                <span class="cross">&#10005</span><h2>Interview John H.</h2><span class="tag verde">Recruiting</span>
                 <br>
-                <span class="spunta">&#10005</span><h2>Summit update to mobile storefronts</h2><span class="giallo">Mobile</span>
+                <span class="spunta">&#10005</span><h2>Summit update to mobile storefronts</h2><span class="tag giallo">Mobile</span>
             </div>
             <div class="upcoming spazioup">
                 <!-- lista -->
+                &#9660 <span class="bold"> Upcoming </span>
+                <br>
+                <span class="cross">&#10005</span><h2>Schedule meeting with Alex</h2>
+                <br>
+                <span class="spunta">&#10005</span><h2>Homepage refresh</h2><span class="tag violetto">Website</span>
+                <br>
+                <span class="spunta">&#10005</span><h2>Onboard new Sales team members</h2><span class="tag lightgreen">Sales</span>
+                <br>
+                <span class="spunta">&#10005</span><h2>Review editorial calendar</h2><span class="tag blu">Editorial</span>
             </div>
         </div>
     </main>
